# TE_finder

./: .cproject  .gitignore  .project  AUTHORS  Blaster_documentation.md  CHANGELOG  CMakeLists.txt  Documentation.md  INSTALL  INSTALL.md  LICENSE  Makefile  README.md  TE_finder_documentation.md  excludes-tar  global_mak.def
src/: CMakeLists.txt
src/BLRlib/: BLRBioSeqDB.h  BLRJoinParameter.cpp  BLRJoinParameter.h  BLRMatchAlign.cpp  BLRMatchAlign.h  BLRMatchJoin.cpp  BLRMatchList.cpp  BLRMatchList.h  BLRMatchMap.cpp  BLRMatchMap.h  BLRMatchMapLoader.cpp  BLRMatchMapLoader.h  BLRMatchMapWriter.cpp  BLRMatchMapWriter.h  BLRMatchPath.cpp  BLRMatchPath.h  BLRMatcherThreadsParameter.cpp  BLRMatcherThreadsParameter.h  BLRRangePairSetList.cpp  BLRRangePairSetList.h  BLRRangePairSetListWriter.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
src/BLRlib/testfiles/: CMakeLists.txt  Makefile  Test_BLRMatchAlign.cpp  Test_BLRMatchAlign.h  Test_BLRMatchJoin.cpp  Test_BLRMatchJoin.h  Test_BLRMatchMap.cpp  Test_BLRMatchMap.h  Test_BLRMatchMapLoad.cpp  Test_BLRMatchMapLoad.h  Test_BLRMatchMapLoadUtils.cpp  Test_BLRMatchMapLoadUtils.h  Test_BLRMatchMapUtils.cpp  Test_BLRMatchPath.cpp  Test_BLRMatchPath.h  Test_BLRUtils.cpp  Test_BLRUtils.h  cmake_install.cmake  test_u.cpp
src/DGElib/: ACG.cpp  ACG.h  BLRBinSearch.h  CMakeLists.txt  Cutter.cpp  Cutter.h  Diag.h  ExtAlign.cpp  ExtAlign.h  FastExtAlign.cpp  FastExtAlign.h  FastLalign.cpp  FastLalign.h  FileUtils.cpp  FragAlign.cpp  FragAlign.h  FragJoin.cpp  FragJoin.h  Galign.h  Graph.cpp  Graph.h  HashAlign.h  HashAlignClone.h  HashDNASeq.cpp  HashDNASeq.h  HashFuncDNASeq.h  HashRepeat.cpp  HashRepeat.h  HashSearch.cpp  ItrAlign.cpp  Lalign.cpp  Lalign.h  Makefile  MinimizerFuncDNASeq.h  RNG.cpp  RNG.h  Random.h  Range.cpp  Range.h  RangeAlign.cpp  (+12 more)
src/DGElib/testfiles/: CMakeLists.txt  Makefile  Test_FastExtAlign.cpp  Test_FastExtAlign.h  Test_FileUtils.cpp  Test_FileUtils.h  Test_FragAlign.cpp  Test_FragAlign.h  Test_FragJoin.cpp  Test_FragJoin.h  Test_Graph.cpp  Test_Graph.h  Test_HashAlign.cpp  Test_HashAlignClone.h  Test_HashDNASeq.cpp  Test_HashDNASeq.h  Test_Range.cpp  Test_Range.h  Test_RangeAlignSet.cpp  Test_RangeAlignSet.h  Test_RangePair.cpp  Test_RangePairSet.cpp  Test_RangePairSet.h  Test_RangePairSetUtils.cpp  Test_RangePairSetUtils.h  cmake_install.cmake  test_u.cpp
src/SDGlib/: BioSeq.cpp  BioSeq.h  BioSeqDB.cpp  BioSeqDB.h  CMakeLists.txt  FastaIstream.cpp  FastaIstream.h  FastaOstream.cpp  FastaOstream.h  Makefile  SDGBioSeq.cpp  SDGBioSeq.h  SDGBioSeqDB.cpp  SDGBioSeqDB.h  SDGBitStr.cpp  SDGBitStr.h  SDGError.cpp  SDGError.h  SDGFastaBioSeq.cpp  SDGFastaBioSeq.h  SDGFastaIstream.h  SDGFastaOstream.cpp  SDGMemBioSeq.cpp  SDGMemBioSeq.h  SDGReference.h  SDGString.cpp  SDGSubBioSeq.cpp  SDGSubBioSeq.h  cmake_install.cmake
src/SDGlib/testfiles/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Test_SDGlib.cpp  Test_SDGlib.h  cmake_install.cmake
src/_old2remove/: Makefile.old  ThreadPool.cpp  ThreadPool.h
src/_old2remove/grouper/: BLRGroup.cpp  BLRGroup.h  BLRMemIdx.h  Makefile  Test_BLRGroup.h  Test_BLRGroupUtils.cpp  Test_BLRGroupUtils.h  Test_F_grouper.cpp  Test_F_grouper.h
src/_old2remove/grouper.bin/: BLRBinSearch.h  BLRGroup.cpp  Makefile
src/_old2remove/grouper.tests/: BLRBinSearchTest.cpp  BLRExhaustSearch.h  BLRGroup.cpp  BLRGroupEBV.cpp  BLRGroupEBV.h  BLRGroupExhaustSearch.cpp  BLRGroupExhaustSearch.h  BLRMemIdx.cpp  BLRMemIdx.h  BLRMemIdxEBV.cpp  BLRMemIdxEBV.h  BLRMemIdxExhaustSearch.cpp  BLRMemIdxExhaustSearch.h  BLRVecBinSearch.h  Makefile  grouper.cpp  grouperBin.cpp  grouperExhaustSearch.cpp  grouperVecBin.cpp
src/_old2remove/hasher/: Makefile
src/blaster/: .gitignore  BLRBlast.h  BLRBlaster.cpp  BLRBlaster.h  BLRBlasterParameter.cpp  BLRBlasterParameter.h  BLRNCBIBlast.cpp  BLRNCBIBlast.h  BLRNCBIBlastPlus.cpp  BLRNCBIBlastPlus.h  BLRWUBlast.cpp  BLRWUBlast.h  CMakeLists.txt  Makefile  blaster2.cpp  cmake_install.cmake
src/blaster/testfiles/: test_blaster.sh
src/duster/: CMakeLists.txt  Duster.cpp  Duster.h  Makefile  cmake_install.cmake  duster_main.cpp
src/duster/testfiles/: CMakeLists.txt  DmelChr4.fa.1.duster.bed  DmelChr4.fa.2.duster.bed  DmelChr4.fa.2.duster.bed.fa  Makefile  Test_Duster.cpp  Test_Duster.h  cmake_install.cmake  expDmelChr4.fa.1.duster.bed  generateExpected.sh  rm-idx.sh  test_u  test_u.cpp
src/grouper.threads/: .gitignore  BLRGroupThreads.cpp  BLRGroupThreads.h  BLRGrouperParameter.cpp  BLRGrouperParameter.h  BLRGrouperThreads.cpp  BLRGrouperThreads.h  CMakeLists.txt  Makefile  cmake_install.cmake  grouperThreads.cpp
src/grouper.threads/testfiles/: .gitignore  CMakeLists.txt  DmelChr4.fa-megablast-316416173.align  Makefile  Test_BLRGroup.cpp  Test_BLRGroup.h  Test_BLRGroupUtils.cpp  Test_BLRGroupUtils.h  Test_BLRGrouper.cpp  Test_BLRGrouper.h  cmake_install.cmake  test_u.cpp
src/hasher/: .gitignore  CMakeLists.txt  HashDNASeq.h  Hasher.cpp  Hasher.h  hasher_main.cpp
src/hasher/testfiles/: .gitignore  CMakeLists.txt  DmelChr4.fa.hasher.align  Test_Hasher.cpp  Test_Hasher.h  duster-specific.fa.extracted  expDmelChr4.fa.hasher.align  generateExpected.sh  rm-idx.sh  statAlign.py  test_hasher.sh  test_u.cpp
src/hasher2/: Hasher.cpp  Makefile  cmake_install.cmake
src/hasher2/testfiles/: test_hasher.sh
src/matcher/: BLRMatcherParameter.cpp  BLRMatcherParameter.h  CMakeLists.txt  Makefile  cmake_install.cmake  matcher.cpp
src/matcher.threads/: .gitignore  BLRMatcherThreads.cpp  BLRMatcherThreads.h  BLRMatcherThreadsParameter.cpp  BLRMatcherThreadsParameter.h  CMakeLists.txt  Makefile  cmake_install.cmake  matcherThreads.cpp
src/matcher.threads/testfiles/: Makefile  (+8 more)
src/tools/: .gitignore  CMakeLists.txt  Makefile  NWalign.cpp  TRsearch.cpp  TSDsearch.cpp  align2piler.cpp  align2recon.cpp  cmake_install.cmake  cutterDB.cpp  fastlalign.cpp  halign.cpp  hrepeat.cpp  hsearch.cpp  itrsearch.cpp  map2db.cpp  map2flank3.cpp  map2flank5.cpp  map2flank53.cpp  mapOp.cpp  mapdist.cpp  orienter.cpp  polyAtail.cpp  refalign.cpp  rpt_map.c  rpt_map.d  statalign.cpp
(+592 files in other folders)
