cmake_minimum_required(VERSION 3.5)

project(tools${VERSION})
add_subdirectory (testfiles)

add_executable(cutterDB cutterDB.cpp)
add_executable(itrsearch itrsearch.cpp)
add_executable(ltrsearch ltrsearch.cpp)
add_executable(TRsearch TRsearch.cpp)
add_executable(polyAtail polyAtail.cpp)
add_executable(TSDsearch TSDsearch.cpp)
add_executable(map2db map2db.cpp)
add_executable(mapdist mapdist.cpp)
add_executable(mapsize mapsize.cpp)
add_executable(map2flank53 map2flank53.cpp)
add_executable(map2flank5 map2flank5.cpp)
add_executable(map2flank3 map2flank3.cpp)
add_executable(mapview mapview.cpp)
add_executable(mapOp mapOp.cpp)
add_executable(refalign refalign.cpp)
add_executable(statalign statalign.cpp)
add_executable(fastlalign fastlalign.cpp)
add_executable(hrepeat hrepeat.cpp)
add_executable(halign halign.cpp)
add_executable(hsearch hsearch.cpp)
add_executable(SWalign SWalign.cpp)
add_executable(NWalign NWalign.cpp)
add_executable(orienter orienter.cpp)
add_executable(setnum2id setnum2id.cpp)
add_executable(pathnum2id pathnum2id.cpp)
add_executable(align2piler align2piler.cpp)
add_executable(align2recon align2recon.cpp)
add_executable(filterAlign filterAlign.cpp)
add_executable(tabnum2id tabnum2id.cpp)
add_executable(rpt_map rpt_map.c)

target_link_libraries(cutterDB SDGlib DGElib BLRlib)
target_link_libraries(itrsearch SDGlib DGElib BLRlib)
target_link_libraries(ltrsearch SDGlib DGElib BLRlib)
target_link_libraries(TRsearch SDGlib DGElib BLRlib)
target_link_libraries(polyAtail SDGlib DGElib BLRlib)
target_link_libraries(TSDsearch SDGlib DGElib BLRlib)
target_link_libraries(map2db SDGlib DGElib BLRlib)
target_link_libraries(mapdist SDGlib DGElib BLRlib)
target_link_libraries(mapsize SDGlib DGElib BLRlib)
target_link_libraries(map2flank53 SDGlib DGElib BLRlib)
target_link_libraries(map2flank5 SDGlib DGElib BLRlib)
target_link_libraries(map2flank3 SDGlib DGElib BLRlib)
target_link_libraries(mapview SDGlib DGElib BLRlib)
target_link_libraries(mapOp SDGlib DGElib BLRlib)
target_link_libraries(refalign SDGlib DGElib BLRlib)
target_link_libraries(statalign SDGlib DGElib BLRlib)
target_link_libraries(fastlalign SDGlib DGElib BLRlib)
target_link_libraries(hrepeat SDGlib DGElib BLRlib)
target_link_libraries(halign SDGlib DGElib BLRlib)
target_link_libraries(hsearch SDGlib DGElib BLRlib)
target_link_libraries(SWalign SDGlib DGElib BLRlib)
target_link_libraries(NWalign SDGlib DGElib BLRlib)
target_link_libraries(orienter SDGlib DGElib BLRlib)
target_link_libraries(setnum2id SDGlib DGElib BLRlib)
target_link_libraries(pathnum2id SDGlib DGElib BLRlib)
target_link_libraries(align2piler SDGlib DGElib BLRlib)
target_link_libraries(align2recon SDGlib DGElib BLRlib)
target_link_libraries(filterAlign SDGlib DGElib BLRlib)
target_link_libraries(tabnum2id SDGlib DGElib BLRlib)
target_link_libraries(rpt_map SDGlib DGElib BLRlib)


install (TARGETS cutterDB DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS itrsearch DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS ltrsearch DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS TRsearch DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS polyAtail DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS TSDsearch DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS map2db DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS mapdist DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS mapsize DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS map2flank53 DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS map2flank5 DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS map2flank3 DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS mapview DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS mapOp DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS refalign DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS statalign DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS fastlalign DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS hrepeat DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS halign DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS hsearch DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS SWalign DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS NWalign DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS orienter DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS setnum2id DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS pathnum2id DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS align2piler DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS align2recon DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS filterAlign DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS tabnum2id DESTINATION ${CMAKE_SOURCE_DIR}/bin)
install (TARGETS rpt_map DESTINATION ${CMAKE_SOURCE_DIR}/bin)
